Fix overlapping issues when name is empty in track changes list

--- a/services/web/public/stylesheets/app/editor/track-changes.less
+++ b/services/web/public/stylesheets/app/editor/track-changes.less
@@ -143,6 +143,9 @@
 							top: 3px;
 							left: 0;
 						}
+						.name {
+							display: inline-block;
+						}
 					}
 				}
 				.time {
